- Fixed images on about and um pages to scroll with content - Changed heading text on "kaupa" page back to kaupa - Changed heading on um page so that it would be visible - Lowered the margin values on headings

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -17,7 +17,7 @@
     width: 100%;
     min-height: 500px;
 
-    background: transparent url(../images/bg-subpage.jpg) no-repeat fixed 50% 50%;
+    background: transparent url(../images/bg-subpage.jpg) no-repeat;
     background-size: cover;
   }
 
@@ -31,7 +31,7 @@
     width: 100%;
     min-height: 500px;
 
-    background: transparent url(../images/bg-subpage.jpg) no-repeat fixed 50% 50%;
+    background: transparent url(../images/bg-subpage.jpg) no-repeat;
     background-size: cover;
   }
 
