--- a/styleguide.css
+++ b/styleguide.css
@@ -1,14 +1,14 @@
 
 section {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 h1 {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   border-bottom: 1px solid #999;
 }
 
 h2 {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   border-bottom: 1px solid #999;
 }
